# particleLife

./: CMakeLists.txt  Makefile  README.md
particleLife/: App.cpp  App.h  ImGuiController.cpp  ImGuiController.h  Particle.cpp  Particle.h  ParticlesCalculations.cpp  ParticlesCalculations.h  particleLife.cpp
src/app/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_sample.cpp
